// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Steps renders clickable Steps 1`] = `
<div
  className="steps"
>
  <ol>
    <li
      className="steps-completed"
    >
      

       
      <a>
        <i
          className="completed steps-icon"
        />
        

        Step one
      </a>
       
      

       
    </li>
    <li
      className="steps-ongoing"
    >
      

       
      <a>
        <div
          className="steps-number"
        >
          2
        </div>
        Step two
      </a>
       
      

       
    </li>
    <li
      className=""
    >
      

       
      <a>
        <div
          className="steps-number"
        >
          3
        </div>
        Step three
      </a>
       
      

       
    </li>
    <li
      className="steps-selected"
    >
      <div
        className="steps-number"
      >
        4
      </div>
      Step four
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        5
      </div>
      Step Five
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        6
      </div>
      Step Six
    </li>
  </ol>
  <div
    className="steps-responsive"
  >
    <i
      className="swepay-icon-chevron-left steps-nav-left"
    />
    <div
      className="steps-responsive-text"
    >
      Step 2
    </div>
    <i
      className="swepay-icon-chevron-right steps-nav-right"
    />
  </div>
</div>
`;

exports[`Component: Steps renders in vertical mode if prop vertical is provided 1`] = `
<div
  className="steps steps-vertical"
>
  <ol>
    <li
      className="steps-completed"
    >
      <i
        className="completed steps-icon"
      />
      

      Step one
      

      <div
        className="steps-sub-title"
      >
        24.12.17 12:10
      </div>
    </li>
    <li
      className="steps-ongoing"
    >
      <div
        className="steps-number"
      >
        2
      </div>
      Step two
    </li>
    <li
      className="steps-selected"
    >
      <div
        className="steps-number"
      >
        3
      </div>
      Step three
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        4
      </div>
      Step four
    </li>
  </ol>
</div>
`;

exports[`Component: Steps renders with default items if no props are provided 1`] = `
<div
  className="steps"
>
  <ol>
    <li
      className="steps-completed"
    >
      <i
        className="completed steps-icon"
      />
      

      Step one
      

      <div
        className="steps-sub-title"
      >
        24.12.17 12:10
      </div>
    </li>
    <li
      className="steps-ongoing"
    >
      <div
        className="steps-number"
      >
        2
      </div>
      Step two
    </li>
    <li
      className="steps-selected"
    >
      <div
        className="steps-number"
      >
        3
      </div>
      Step three
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        4
      </div>
      Step four
    </li>
  </ol>
</div>
`;

exports[`Component: Steps renders with given items if prop Steps is given 1`] = `
<div
  className="steps"
>
  <ol>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        1
      </div>
      one step
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        2
      </div>
      two steps
    </li>
    <li
      className=""
    >
      <div
        className="steps-number"
      >
        3
      </div>
      three steps for testing
    </li>
  </ol>
  <div
    className="steps-responsive"
  >
    <div
      className="steps-responsive-text"
    >
      Step 2
    </div>
  </div>
</div>
`;
